k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: foodgram

spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-pod
  template:
    metadata:
      labels:
        app: backend-pod
    spec:
      containers:
        - name: backend-pod
          image: mrilki/foodgram_backend:latest
          ports:
            - containerPort: 8000
          volumeMounts:  
            - name: collected-static
              mountPath: /staticfiles/static
            - name: media-storage       
              mountPath: /app/media  
      volumes:
        - name: collected-static
          persistentVolumeClaim:
            claimName: collected-pvc
        - name: media-storage       
          persistentVolumeClaim:
            claimName: media-pvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
