k8s/db-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: foodgram
spec:
  serviceName: db-service
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: bitnami/postgresql:latest
        ports:
        - name: postgresql
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: db-storage
          mountPath: /bitnami/postgresql
  volumeClaimTemplates:
      - metadata:
          name: db-storage
        spec:
          accessModes: 
          - "ReadWriteOnce"
          storageClassName: standard
          resources:
            requests:
              storage: 1Gi
