k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: foodgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: placeholder
        image: alpine
        command: ["sleep", "3600"]
        volumeMounts:
        - name: static-volume
          mountPath: /static

      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-pvc
