k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: foodgram
spec:
  type: NodePort
  selector:
    app: backend-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
