k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: foodgram
spec:
  type: ClusterIP
  clusterIP: None 
  selector:
    app: postgres
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
    protocol: TCP
